Fixed issue on mobile with text going outside of section areas

--- a/assets/stylesheets/components/structure.scss
+++ b/assets/stylesheets/components/structure.scss
@@ -18,6 +18,12 @@ body {
 
 .section-styles {
     max-width: 98%;
+    
+    /* Keep text away from the edges of the viewport on smaller viewports */
+    @include mqMaxWidth(767px) {
+        padding: 20px; 
+    }
+    
     @extend %section-styles
 }
 
